--- a/ruoyi-admin/src/main/resources/templates/system/room/room.html
+++ b/ruoyi-admin/src/main/resources/templates/system/room/room.html
@@ -24,88 +24,88 @@
     <th:block th:include="include :: header('房子管理列表')" />
 </head>
 <body class="gray-bg">
-     <div class="container-div">
-        <div class="row">
-            <div class="col-sm-12 search-collapse">
-                <form id="formId">
-                    <div class="select-list">
-                        <ul>
-                            <li>
-                                <label>民宿ID：</label>
-                                <input type="text" name="houseId"/>
-                            </li>
-                            <li>
-                                <label>房间号：</label>
-                                <input type="text" name="roomNumber"/>
-                            </li>
-                            <li>
-                                <label>每日价格：</label>
-                                <input type="text" name="pricePerDay"/>
-                            </li>
-                            <li>
-                                <label>房间标准：</label>
-                                <input type="text" name="standard"/>
-                            </li>
-                            <li>
-                                <label>空闲：</label>
-                                <input type="text" name="isFree"/>
-                            </li>
-                            <li>
-                                <a class="btn btn-primary btn-rounded btn-sm noprint" onclick="$.table.search()"><i class="fa fa-search"></i>&nbsp;搜索</a>
-                                <a class="btn btn-warning btn-rounded btn-sm" onclick="$.form.reset()"><i class="fa fa-refresh"></i>&nbsp;重置</a>
-                            </li>
-                        </ul>
-                    </div>
-                </form>
-            </div>
-
-            <div class="btn-group-sm" id="toolbar" role="group">
-                <a class="btn btn-success" onclick="$.operate.add()" shiro:hasPermission="system:room:add">
-                    <i class="fa fa-plus"></i> 上传房源
-                </a>
-                <a class="btn btn-primary single disabled" onclick="$.operate.edit()" shiro:hasPermission="system:room:edit">
-                    <i class="fa fa-edit"></i> 修改
-                </a>
-                <a class="btn btn-danger multiple disabled" onclick="$.operate.removeAll()" shiro:hasPermission="system:room:remove">
-                    <i class="fa fa-remove"></i> 删除
-                </a>
-                <a class="btn btn-warning" onclick="$.table.exportExcel()" shiro:hasPermission="system:room:export">
-                    <i class="fa fa-download"></i> 导出
-                </a>
-                <a class="btn btn-success" onclick="$.modal.openTab('房源统计', '/system/room/statistics');" shiro:hasPermission="system:room:statistics">
-                    <i class="fa fa-plus"></i> 统计
-                </a>
-                <a class="btn btn-success" onclick="printHtml();" shiro:hasPermission="xxxx:xxxx:print">
-                    <i class="glyphicon glyphicon-print icon-share"></i> 打印
-                </a>
-            </div>
-            <div class="col-sm-12 select-table table‐bordered noprint" id="prints" style="width: 100%;">
-                <!--<table id="bootstrap-table" style="width: 100%;white-space: nowrap;  "></table>-->
-                <!--超长冒号显示会影响打印-->
-                <table id="bootstrap-table" style="width: 100%;word-break:break-all; word-wrap:break-all; "></table>
-            </div>
-<!--            <div class="col-sm-12 select-table table-striped">-->
-<!--                <table id="bootstrap-table"></table>-->
-<!--            </div>-->
+<div class="container-div">
+    <div class="row">
+        <div class="col-sm-12 search-collapse">
+            <form id="formId">
+                <div class="select-list">
+                    <ul>
+                        <li>
+                            <label>民宿ID：</label>
+                            <input type="text" name="houseId"/>
+                        </li>
+                        <li>
+                            <label>房间号：</label>
+                            <input type="text" name="roomNumber"/>
+                        </li>
+                        <li>
+                            <label>每日价格：</label>
+                            <input type="text" name="pricePerDay"/>
+                        </li>
+                        <li>
+                            <label>房间标准：</label>
+                            <input type="text" name="standard"/>
+                        </li>
+                        <li>
+                            <label>空闲：</label>
+                            <input type="text" name="isFree"/>
+                        </li>
+                        <li>
+                            <a class="btn btn-primary btn-rounded btn-sm noprint" onclick="$.table.search()"><i class="fa fa-search"></i>&nbsp;搜索</a>
+                            <a class="btn btn-warning btn-rounded btn-sm" onclick="$.form.reset()"><i class="fa fa-refresh"></i>&nbsp;重置</a>
+                        </li>
+                    </ul>
+                </div>
+            </form>
         </div>
-    </div>
-    <th:block th:include="include :: footer" />
-    <script th:inline="javascript">
-        var editFlag = [[${@permission.hasPermi('system:room:edit')}]];
-        var removeFlag = [[${@permission.hasPermi('system:room:remove')}]];
-        var prefix = ctx + "system/room";
 
-        $(function() {
-            var options = {
-                url: prefix + "/list",
-                createUrl: prefix + "/add",
-                updateUrl: prefix + "/edit/{id}",
-                removeUrl: prefix + "/remove",
-                exportUrl: prefix + "/export",
-                modalName: "房子管理",
-                columns: [{
-                    checkbox: true
-                },
+        <div class="btn-group-sm" id="toolbar" role="group">
+            <a class="btn btn-success" onclick="$.operate.add()" shiro:hasPermission="system:room:add">
+                <i class="fa fa-plus"></i> 上传房源
+            </a>
+            <a class="btn btn-primary single disabled" onclick="$.operate.edit()" shiro:hasPermission="system:room:edit">
+                <i class="fa fa-edit"></i> 修改
+            </a>
+            <a class="btn btn-danger multiple disabled" onclick="$.operate.removeAll()" shiro:hasPermission="system:room:remove">
+                <i class="fa fa-remove"></i> 删除
+            </a>
+            <a class="btn btn-warning" onclick="$.table.exportExcel()" shiro:hasPermission="system:room:export">
+                <i class="fa fa-download"></i> 导出
+            </a>
+            <a class="btn btn-success" onclick="$.modal.openTab('房源统计', '/system/room/statistics');" shiro:hasPermission="system:room:statistics">
+                <i class="fa fa-plus"></i> 统计
+            </a>
+            <a class="btn btn-success" onclick="printHtml();" shiro:hasPermission="xxxx:xxxx:print">
+                <i class="glyphicon glyphicon-print icon-share"></i> 打印
+            </a>
+        </div>
+        <div class="col-sm-12 select-table table‐bordered noprint" id="prints" style="width: 100%;">
+            <!--<table id="bootstrap-table" style="width: 100%;white-space: nowrap;  "></table>-->
+            <!--超长冒号显示会影响打印-->
+            <table id="bootstrap-table" style="width: 100%;word-break:break-all; word-wrap:break-all; "></table>
+        </div>
+        <!--            <div class="col-sm-12 select-table table-striped">-->
+        <!--                <table id="bootstrap-table"></table>-->
+        <!--            </div>-->
+    </div>
+</div>
+<th:block th:include="include :: footer" />
+<script th:inline="javascript">
+    var editFlag = [[${@permission.hasPermi('system:room:edit')}]];
+    var removeFlag = [[${@permission.hasPermi('system:room:remove')}]];
+    var prefix = ctx + "system/room";
+
+    $(function() {
+        var options = {
+            url: prefix + "/list",
+            createUrl: prefix + "/add",
+            updateUrl: prefix + "/edit/{id}",
+            removeUrl: prefix + "/remove",
+            exportUrl: prefix + "/export",
+            modalName: "房子管理",
+            columns: [{
+                checkbox: true
+            },
                 {
                     field: 'id',
                     title: '',
@@ -114,13 +114,14 @@
                 {
                     field: 'houseId',
                     title: '民宿ID',
+                    sortable: 'true',
+                    visible: false
+                },
+                {
+                    field: 'houseName',
+                    title: '民宿名称',
                     sortable: 'true'
                 },
-                    {
-                        field: 'houseName',
-                        title: '民宿名称',
-                        sortable: 'true'
-                    },
                 {
                     field: 'roomNumber',
                     title: '房间号',
@@ -158,21 +159,21 @@
                         return actions.join('');
                     }
                 }]
-            };
-            $.table.init(options);
-        });
+        };
+        $.table.init(options);
+    });
 
-        function printHtml() {
-            $("#prints").removeClass("noprint");
-            //隐藏操作列
-            $.table.hideColumn('caozuo');
-            window.print();
-            $("#option").addClass("noprint");
-            //显示操作列
-            $.table.showColumn('caozuo');
-        }
+    function printHtml() {
+        $("#prints").removeClass("noprint");
+        //隐藏操作列
+        $.table.hideColumn('caozuo');
+        window.print();
+        $("#option").addClass("noprint");
+        //显示操作列
+        $.table.showColumn('caozuo');
+    }
 
 
-    </script>
+</script>
 </body>
 </html>
