--- a/ruoyi-admin/src/main/resources/templates/system/landlord/add.html
+++ b/ruoyi-admin/src/main/resources/templates/system/landlord/add.html
@@ -8,44 +8,59 @@
 <div class="wrapper wrapper-content animated fadeInRight ibox-content">
     <form class="form-horizontal m" id="form-landlord-add">
         <div class="form-group">
-            <label class="col-sm-3 control-label">民宿名称：</label>
+            <label class="col-sm-3 control-label is-required">民宿名称：</label>
             <div class="col-sm-8">
-                <input name="houseName" class="form-control" type="text">
+                <input name="houseName" class="form-control" type="text" required="required">
             </div>
         </div>
-<!--        <div class="form-group">-->
-<!--            <label class="col-sm-3 control-label">：</label>-->
-<!--            <div class="col-sm-8">-->
-<!--                <input name="hostNumber" class="form-control" type="text">-->
-<!--            </div>-->
-<!--        </div>-->
+        <!--        <div class="form-group">-->
+        <!--            <label class="col-sm-3 control-label">：</label>-->
+        <!--            <div class="col-sm-8">-->
+        <!--                <input name="hostNumber" class="form-control" type="text">-->
+        <!--            </div>-->
+        <!--        </div>-->
         <div class="form-group">
-            <label class="col-sm-3 control-label">民宿地址：</label>
+            <label class="col-sm-3 control-label is-required">民宿地址：</label>
             <div class="col-sm-8">
-                <input name="address" class="form-control" type="text">
+                <input name="address" class="form-control" type="text" required="required">
             </div>
         </div>
         <div class="form-group">
-            <label class="col-sm-3 control-label">民宿图片（上传网络地址）：</label>
+            <label class="col-sm-3 control-label is-required">民宿图片：</label>
             <div class="col-sm-8">
-                <input name="imageUrl" class="form-control" type="text">
+                <input name="imageUrl" class="form-control" type="text" id="imageUrl"  required="required" >
             </div>
         </div>
-<!--        <div class="form-group">-->
-<!--            <label class="col-sm-3 control-label">：</label>-->
-<!--            <div class="col-sm-8">-->
-<!--                <input name="score" class="form-control" type="text">-->
-<!--            </div>-->
-<!--        </div>-->
-<!--        <div class="form-group">-->
-<!--            <label class="col-sm-3 control-label">：</label>-->
-<!--            <div class="col-sm-8">-->
-<!--                <div class="input-group date">-->
-<!--                    <input name="registerTime" class="form-control" placeholder="yyyy-MM-dd" type="text">-->
-<!--                    <span class="input-group-addon"><i class="fa fa-calendar"></i></span>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
+
+
+
+
+
+
+
+
+
+        <div class="form-group">
+            <div class="col-sm-8 control-label">
+                <button class="btn btn-primary" type="button" onclick="uploadIconBtn(this)" id="uploadButton">
+                    <i class="fa fa-upload"></i>&nbsp;&nbsp;&nbsp;&nbsp;<span class="bold" id="uploadSpan">上传图片</span>
+                </button>
+            </div>
+        </div>
+
+        <div class="form-group" id="uploadDiv">
+            <label class="col-sm-3 control-label">上传图片</label>
+            <div class="file-loading">
+                <input class="file" type="file" name="landlordImage" id="fileinput" data-min-file-count="1" data-max-file-count="1" data-theme="fas">
+            </div>
+        </div>
+
+
+
+
+
+
+
     </form>
 </div>
 <th:block th:include="include :: footer" />
@@ -68,5 +83,62 @@
     //     autoclose: true
     // });
 </script>
+
+
+
+
+<script>
+    /* hide uploadDiv */
+    $(function() {
+        var div = $("#uploadDiv");
+        div.hide();
+    });
+    /* click the id is uploadIconBtn button to display the id is uploadDiv div*/
+    function uploadIconBtn(btn) {
+        var $span = $("#uploadSpan");
+        var uploadDiv = $("#uploadDiv");
+        // console.log($span[0].innerText);
+        if ($span[0].innerText == "上传图片") {
+            uploadDiv.show();
+            $span[0].innerText = "取消上传";
+        } else {
+            uploadDiv.hide();
+            $span[0].innerText = "上传图片";
+        }
+    }
+</script>
+
+
+<!-- 图片上传 -->
+<script type="text/javascript">
+    $(function() {
+        $("#fileinput").fileinput({
+            uploadUrl: '/system/landlord/menuIconUpload',
+            maxFileCount: 1,
+            maxFileSize: 1024*3,
+            allowedFileTypes: 'jpg,png',
+            initialPreviewAsData: true,
+            overwriteInitial: true,
+        }).on("fileuploaded", function (event, data, previewId, index) {
+            // 图片上传成功
+            var previewImage = $(".file-preview-image")[0]; // 获取预览图片
+            // 获取/news/menu/menuIconUpload接口返回的数据。
+            var fileStoragePath = data.response.fileStoragePath;
+            var genFilename = data.response.genFilename;
+            var URL = data.response.savePath;
+            console.log(URL);
+            console.dir("图片上传成功！URL："+URL);
+            // 隐藏不必要的div和按钮
+            $("#uploadDiv").hide(); // 隐藏取div
+            var $span = $("#uploadSpan");
+            $span[0].innerText = "上传图片";
+            //$("#uploadButton").hide(); // 隐藏上传按钮
+            $.modal.msgSuccess("图片上传成功！"); // 提示框
+            //$("#hiddenData").append('<input type="text" value="'+URL+'" name="imageUrl" disabled>'); // 创建一个input存储URL
+            document.getElementById("imageUrl").value=URL;
+        })
+    });
+</script>
+<th:block th:include="include :: bootstrap-fileinput-js"/>
 </body>
 </html>
