--- a/ruoyi-admin/src/main/resources/templates/system/specialty/specialty.html
+++ b/ruoyi-admin/src/main/resources/templates/system/specialty/specialty.html
@@ -88,97 +88,98 @@
             <!--超长冒号显示会影响打印-->
             <table id="bootstrap-table" style="width: 100%;word-break:break-all; word-wrap:break-all; "></table>
         </div>
-<!--        <div class="col-sm-12 select-table table-striped">-->
-<!--            <table id="bootstrap-table"></table>-->
-<!--        </div>-->
-<!--    </div>-->
-</div>
-<th:block th:include="include :: footer" />
-<script th:inline="javascript">
-    var editFlag = [[${@permission.hasPermi('system:specialty:edit')}]];
-    var removeFlag = [[${@permission.hasPermi('system:specialty:remove')}]];
-    var prefix = ctx + "system/specialty";
+        <!--        <div class="col-sm-12 select-table table-striped">-->
+        <!--            <table id="bootstrap-table"></table>-->
+        <!--        </div>-->
+        <!--    </div>-->
+    </div>
+    <th:block th:include="include :: footer" />
+    <script th:inline="javascript">
+        var editFlag = [[${@permission.hasPermi('system:specialty:edit')}]];
+        var removeFlag = [[${@permission.hasPermi('system:specialty:remove')}]];
+        var prefix = ctx + "system/specialty";
 
-    $(function() {
-        var options = {
-            url: prefix + "/list",
-            createUrl: prefix + "/add",
-            updateUrl: prefix + "/edit/{id}",
-            removeUrl: prefix + "/remove",
-            exportUrl: prefix + "/export",
-            modalName: "我的特产",
-            columns: [{
-                checkbox: true
-            },
-                {
-                    field: 'id',
-                    title: '',
-                    visible: false
+        $(function() {
+            var options = {
+                url: prefix + "/list",
+                createUrl: prefix + "/add",
+                updateUrl: prefix + "/edit/{id}",
+                removeUrl: prefix + "/remove",
+                exportUrl: prefix + "/export",
+                modalName: "我的特产",
+                columns: [{
+                    checkbox: true
                 },
-                {
-                    field: 'houseId',
-                    title: '民宿ID',
-                    sortable: 'true'
-                },
-                {
-                    field: 'houseName',
-                    title: '民宿名称',
-                    sortable: 'true'
-                },
-                {
-                    field: 'specialtyName',
-                    title: '特产名称',
-                    sortable: 'true'
-                },
-                {
-                    field: 'description',
-                    title: '特产描述'
-                },
-                {
-                    field: 'price',
-                    title: '特产单价',
-                    sortable: 'true'
-                },
-                {
-                    field: 'inventory',
-                    title: '库存量',
-                    sortable: 'true'
-                },
-                {
-                    field: 'imageUrl',
-                    title: '特产图片',
-                    formatter: function(value, row, index) {
-                        var actions = [];
-                        actions.push('<img src="'+value+'" alt="无法显示图片" height="60" width="90"/>');
-                        return actions.join('');
-                    }
-                },
-                {
-                    title: '操作',
-                    field: 'caozuo',
-                    width: '150px',
-                    align: 'center',
-                    formatter: function(value, row, index) {
-                        var actions = [];
-                        actions.push('<a class="btn btn-success btn-xs ' + editFlag + '" href="javascript:void(0)" onclick="$.operate.edit(\'' + row.id + '\')"><i class="fa fa-edit"></i>修改信息</a> ');
-                        actions.push('<a class="btn btn-danger btn-xs ' + removeFlag + '" href="javascript:void(0)" onclick="$.operate.remove(\'' + row.id + '\')"><i class="fa fa-remove"></i>删除</a>');
-                        return actions.join('');
-                    }
-                }]
-        };
-        $.table.init(options);
-    });
+                    {
+                        field: 'id',
+                        title: '',
+                        visible: false
+                    },
+                    {
+                        field: 'houseId',
+                        title: '民宿ID',
+                        sortable: 'true',
+                        visible: false
+                    },
+                    {
+                        field: 'houseName',
+                        title: '民宿名称',
+                        sortable: 'true'
+                    },
+                    {
+                        field: 'specialtyName',
+                        title: '特产名称',
+                        sortable: 'true'
+                    },
+                    {
+                        field: 'description',
+                        title: '特产描述'
+                    },
+                    {
+                        field: 'price',
+                        title: '特产单价',
+                        sortable: 'true'
+                    },
+                    {
+                        field: 'inventory',
+                        title: '库存量',
+                        sortable: 'true'
+                    },
+                    {
+                        field: 'imageUrl',
+                        title: '特产图片',
+                        formatter: function(value, row, index) {
+                            var actions = [];
+                            actions.push('<img src="'+value+'" alt="无法显示图片" height="60" width="90"/>');
+                            return actions.join('');
+                        }
+                    },
+                    {
+                        title: '操作',
+                        field: 'caozuo',
+                        width: '150px',
+                        align: 'center',
+                        formatter: function(value, row, index) {
+                            var actions = [];
+                            actions.push('<a class="btn btn-success btn-xs ' + editFlag + '" href="javascript:void(0)" onclick="$.operate.edit(\'' + row.id + '\')"><i class="fa fa-edit"></i>修改信息</a> ');
+                            actions.push('<a class="btn btn-danger btn-xs ' + removeFlag + '" href="javascript:void(0)" onclick="$.operate.remove(\'' + row.id + '\')"><i class="fa fa-remove"></i>删除</a>');
+                            return actions.join('');
+                        }
+                    }]
+            };
+            $.table.init(options);
+        });
 
-    function printHtml() {
-        $("#prints").removeClass("noprint");
-        //隐藏操作列
-        $.table.hideColumn('caozuo');
-        window.print();
-        $("#option").addClass("noprint");
-        //显示操作列
-        $.table.showColumn('caozuo');
-    }
+        function printHtml() {
+            $("#prints").removeClass("noprint");
+            //隐藏操作列
+            $.table.hideColumn('caozuo');
+            window.print();
+            $("#option").addClass("noprint");
+            //显示操作列
+            $.table.showColumn('caozuo');
+        }
 
-</script>
+    </script>
 </body>
 </html>
