--- a/ruoyi-admin/src/main/resources/templates/housesgps/gps/baiduapi.html
+++ b/ruoyi-admin/src/main/resources/templates/housesgps/gps/baiduapi.html
@@ -1,31 +1,137 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.w3.org/1999/xhtml" >
+<html xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Baidu Map </title>
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <style type="text/css">
-        html{height:100%}
-        body{height:100%;margin:0px;padding:0px}
-        #container{height:100%}
+        body, html{width: 100%;height: 100%;margin:0;font-family:"微软雅黑";font-size:14px;}
+        #l-map{height:360px;width:100%;}
+        #r-result{width:100%;}
     </style>
+
+    <title>关键字输入提示词条</title>
 </head>
 <body>
-    <div name="container" id="container"></div>
-<script src="https://api.map.baidu.com/api?v=1.0&type=webgl&ak=frhSyaiBg0LIz22SAcjFiCQR4zwvK8sK"></script>
-<script th:inline = "javascript">
-    var map = new BMapGL.Map("container");          // 创建地图实例
-    var point = new BMapGL.Point(116.404, 39.915);  // 创建点坐标
-    map.centerAndZoom(point, 15);                 // 初始化地图，设置中心点坐标和地图级别
-    map.enableScrollWheelZoom(true);     //开启鼠标滚轮缩放
-    map.setHeading(64.5);   //设置地图旋转角度
-    map.setTilt(73);       //设置地图的倾斜角度
+<div id="l-map"></div>
+<div id="r-result">请输入:<input type="text" id="suggestId" size="20" value="民宿" style="width:150px;" /></div>
+<div id="searchResultPanel" style="border:1px solid #C0C0C0;width:150px;height:auto; display:none;"></div>
 
-    // 禁止地图旋转和倾斜可以通过配置项进行设置
-    var map = new BMapGL.Map("allmap",{
-        enableRotate: false,
-        enableTilt: false
+
+<script src="https://api.map.baidu.com/api?v=2.0&ak=frhSyaiBg0LIz22SAcjFiCQR4zwvK8sK"></script>
+<script th:inline = "javascript"></script>
+<script type="text/javascript">
+    // 百度地图API功能
+    function G(id) {
+        return document.getElementById(id);
+    }
+
+    var map = new BMap.Map("l-map");
+    map.centerAndZoom("北京",12);                   // 初始化地图,设置城市和地图级别。
+
+    var ac = new BMap.Autocomplete(    //建立一个自动完成的对象
+        {"input" : "suggestId"
+            ,"location" : map
+        });
+
+    ac.addEventListener("onhighlight", function(e) {  //鼠标放在下拉列表上的事件
+        var str = "";
+        var _value = e.fromitem.value;
+        var value = "";
+        if (e.fromitem.index > -1) {
+            value = _value.province +  _value.city +  _value.district +  _value.street +  _value.business;
+        }
+        str = "FromItem<br />index = " + e.fromitem.index + "<br />value = " + value;
+
+        value = "";
+        if (e.toitem.index > -1) {
+            _value = e.toitem.value;
+            value = _value.province +  _value.city +  _value.district +  _value.street +  _value.business;
+        }
+        str += "<br />ToItem<br />index = " + e.toitem.index + "<br />value = " + value;
+        G("searchResultPanel").innerHTML = str;
     });
+
+    var myValue;
+    ac.addEventListener("onconfirm", function(e) {    //鼠标点击下拉列表后的事件
+        var _value = e.item.value;
+        myValue = _value.province +  _value.city +  _value.district +  _value.street +  _value.business;
+        G("searchResultPanel").innerHTML ="onconfirm<br />index = " + e.item.index + "<br />myValue = " + myValue;
+
+        setPlace();
+    });
+
+    function setPlace(){
+        map.clearOverlays();    //清除地图上所有覆盖物
+        function myFun(){
+            var pp = local.getResults().getPoi(0).point;    //获取第一个智能搜索的结果
+            map.centerAndZoom(pp, 18);
+            map.addOverlay(new BMap.Marker(pp));    //添加标注
+        }
+        var local = new BMap.LocalSearch(map, { //智能搜索
+            onSearchComplete: myFun
+        });
+        local.search(myValue);
+    }
+
 </script>
 </body>
 </html>
+<!--<!DOCTYPE html>-->
+<!--<html xmlns:th="http://www.w3.org/1999/xhtml" >-->
+<!--<head>-->
+<!--    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />-->
+<!--    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />-->
+<!--    <title>Baidu Map </title>-->
+<!--    <style type="text/css">-->
+<!--        body,html{-->
+<!--            width: 100%;-->
+<!--            height: 100%;-->
+<!--            padding: 0;-->
+<!--            margin: 0;-->
+<!--        }-->
+<!--        #container{-->
+<!--            width: 100%;-->
+<!--            height: 100%;-->
+<!--            overflow: hidden;-->
+<!--        }-->
+<!--        #result{-->
+<!--            position: fixed;-->
+<!--            top: 10px;-->
+<!--            left: 10px;-->
+<!--            width: 250px;-->
+<!--            height: 30px;-->
+<!--            line-height: 30px;-->
+<!--            text-align: center;-->
+<!--            background: #fff;-->
+<!--            box-shadow: 0 2px 6px 0 rgba(27, 142, 236, 0.5);-->
+<!--            border-radius: 7px;-->
+<!--            z-index: 99;-->
+<!--        }-->
+<!--    </style>-->
+<!--</head>-->
+<!--<body>-->
+<!--    <div name="container" id="container"></div>-->
+<!--<script src="https://api.map.baidu.com/api?v=1.0&type=webgl&ak=frhSyaiBg0LIz22SAcjFiCQR4zwvK8sK"></script>-->
+<!--<script th:inline = "javascript">-->
+
+<!--    var map = new BMapGL.Map("container");          // 创建地图实例-->
+<!--    var point = new BMapGL.Point(116.331398,39.897445);  // 创建点坐标-->
+<!--    map.centerAndZoom(point, 12);                 // 初始化地图，设置中心点坐标和地图级别-->
+<!--    map.enableScrollWheelZoom(true);     //开启鼠标滚轮缩放-->
+<!--    map.setHeading(64.5);   //设置地图旋转角度-->
+<!--    map.setTilt(73);       //设置地图的倾斜角度-->
+
+
+<!--    // 创建城市选择控件-->
+<!--    var cityControl = new BMapGL.CityListControl({-->
+<!--        // 控件的停靠位置（可选，默认左上角）-->
+<!--        anchor: BMAP_ANCHOR_TOP_LEFT,-->
+<!--        // 控件基于停靠位置的偏移量（可选）-->
+<!--        offset: new BMapGL.Size(10, 5)-->
+<!--    });-->
+<!--    // 将控件添加到地图上-->
+<!--    map.addControl(cityControl);-->
+
+<!--</script>-->
+<!--</body>-->
+<!--</html>-->
