--- a/ruoyi-admin/src/main/resources/templates/housesgps/gps/gps.html
+++ b/ruoyi-admin/src/main/resources/templates/housesgps/gps/gps.html
@@ -57,6 +57,7 @@
     <script th:inline="javascript">
         var editFlag = [[${@permission.hasPermi('housesgps:gps:edit')}]];
         var removeFlag = [[${@permission.hasPermi('housesgps:gps:remove')}]];
+        var houseaddressFlag = [[${@permission.hasPermi('housesgps:gps:houseaddress')}]];
         var prefix = ctx + "housesgps/gps";
 
         $(function() {
@@ -64,6 +65,7 @@
                 url: prefix + "/list",
                 createUrl: prefix + "/add",
                 updateUrl: prefix + "/edit/{id}",
+                houseaddressUrl: prefix + "/houseaddress/{id}",
                 removeUrl: prefix + "/remove",
                 exportUrl: prefix + "/export",
                 modalName: "地图管理",
@@ -80,23 +82,25 @@
                     title: '民宿名称'
                 },
                 {
+                    field: 'city',
+                    title: '所在城市'
+                }
+                ,
+                {
                     field: 'address',
                     title: '民宿地址'
-                },
-                {
-                    field: 'score',
-                    title: ''
                 },
                 {
                     title: '操作',
                     align: 'center',
                     formatter: function(value, row, index) {
                         var actions = [];
-                        // actions.push('<a class="btn btn-success btn-xs ' + editFlag + '" href="javascript:void(0)" onclick="$.operate.edit(\'' + row.id + '\')"><i class="fa fa-edit"></i>编辑</a> ');
+                        actions.push('<a class="btn btn-success btn-xs ' + houseaddressFlag + '" href="javascript:void(0)" onclick="$.operate.houseaddressTab(\'' + row.id + '\')"><i class="fa fa-search"></i>定位</a> ');
                         // actions.push('<a class="btn btn-danger btn-xs ' + removeFlag + '" href="javascript:void(0)" onclick="$.operate.remove(\'' + row.id + '\')"><i class="fa fa-remove"></i>删除</a>');
                         return actions.join('');
                     }
-                }]
+                }
+                ]
             };
             $.table.init(options);
         });
