--- a/ruoyi-admin/src/main/resources/templates/housesgps/gps/gps.html
+++ b/ruoyi-admin/src/main/resources/templates/housesgps/gps/gps.html
@@ -2,6 +2,8 @@
 <html lang="zh" xmlns:th="http://www.thymeleaf.org" xmlns:shiro="http://www.pollix.at/thymeleaf/shiro">
 <head>
     <th:block th:include="include :: header('地图管理列表')" />
+
+
 </head>
 <body class="gray-bg">
      <div class="container-div">
@@ -10,22 +12,22 @@
                 <form id="formId">
                     <div class="select-list">
                         <ul>
-<!--                            <li>-->
-<!--                                <label>：</label>-->
-<!--                                <input type="text" name="houseName"/>-->
-<!--                            </li>-->
-<!--                            <li>-->
-<!--                                <label>：</label>-->
-<!--                                <input type="text" name="address"/>-->
-<!--                            </li>-->
-<!--                            <li>-->
-<!--                                <label>：</label>-->
-<!--                                <input type="text" name="score"/>-->
-<!--                            </li>-->
-<!--                            <li>-->
-<!--                                <a class="btn btn-primary btn-rounded btn-sm" onclick="$.table.search()"><i class="fa fa-search"></i>&nbsp;搜索</a>-->
-<!--                                <a class="btn btn-warning btn-rounded btn-sm" onclick="$.form.reset()"><i class="fa fa-refresh"></i>&nbsp;重置</a>-->
-<!--                            </li>-->
+                            <li>
+                                <label>民宿名称：</label>
+                                <input type="text" name="houseName"/>
+                            </li>
+                            <li>
+                                <label>民宿地址：</label>
+                                <input type="text" name="address"/>
+                            </li>
+                            <li>
+                                <label>所在城市：</label>
+                                <input type="text" name="city"/>
+                            </li>
+                            <li>
+                                <a class="btn btn-primary btn-rounded btn-sm" onclick="$.table.search()"><i class="fa fa-search"></i>&nbsp;搜索</a>
+                                <a class="btn btn-warning btn-rounded btn-sm" onclick="$.form.reset()"><i class="fa fa-refresh"></i>&nbsp;重置</a>
+                            </li>
                         </ul>
                     </div>
                 </form>
@@ -41,16 +43,26 @@
 <!--                <a class="btn btn-danger multiple disabled" onclick="$.operate.removeAll()" shiro:hasPermission="housesgps:gps:remove">-->
 <!--                    <i class="fa fa-remove"></i> 删除-->
 <!--                </a>-->
-<!--                <a class="btn btn-warning" onclick="$.table.exportExcel()" shiro:hasPermission="housesgps:gps:export">-->
-<!--                    <i class="fa fa-download"></i> 导出-->
-<!--                </a>-->
+                <a class="btn btn-success" onclick="$.table.exportExcel()" shiro:hasPermission="housesgps:gps:export">
+                    <i class="fa fa-download"></i> 导出
+                </a>
+                <a class="btn btn-success" onclick="printHtml();" shiro:hasPermission="housesgps:gps:print">
+                    <i class="glyphicon glyphicon-print icon-share"></i> 打印
+                </a>
+
                 <a class="btn btn-warning" onclick="$.modal.openTab('地图查找', '/housesgps/gps/baiduapi');" shiro:hasPermission="housesgps:gps:baiduapi">
                     <i class="fa fa-plus"></i> 地图查找
                 </a>
             </div>
-            <div class="col-sm-12 select-table table-striped">
-                <table id="bootstrap-table"></table>
+<!--            <div class="col-sm-12 select-table table-striped">-->
+<!--                <table id="bootstrap-table"></table>-->
+<!--            </div>-->
+            <div class="col-sm-12 select-table table‐bordered noprint" id="prints" style="width: 100%;">
+                <!--<table id="bootstrap-table" style="width: 100%;white-space: nowrap;  "></table>-->
+                <!--超长冒号显示会影响打印-->
+                <table id="bootstrap-table" style="width: 100%;word-break:break-all; word-wrap:break-all; "></table>
             </div>
+
         </div>
     </div>
     <th:block th:include="include :: footer" />
@@ -59,6 +71,17 @@
         var removeFlag = [[${@permission.hasPermi('housesgps:gps:remove')}]];
         var houseaddressFlag = [[${@permission.hasPermi('housesgps:gps:houseaddress')}]];
         var prefix = ctx + "housesgps/gps";
+        // 自定义打印页面模板
+        function printHtml() {
+            $("#prints").removeClass("noprint");
+            //隐藏操作列
+            $.table.hideColumn('chaozuo');
+            window.print();
+            $("#option").addClass("noprint");
+            //显示操作列
+            $.table.showColumn('chaozuo');
+        }
+
 
         $(function() {
             var options = {
@@ -79,20 +102,25 @@
                 },
                 {
                     field: 'houseName',
-                    title: '民宿名称'
+                    title: '民宿名称',
+                    sortable:true
                 },
                 {
                     field: 'city',
-                    title: '所在城市'
+                    title: '所在城市',
+                    sortable:true
                 }
                 ,
                 {
                     field: 'address',
-                    title: '民宿地址'
+                    title: '民宿地址',
+                    sortable:true
                 },
                 {
                     title: '操作',
                     align: 'center',
+                    field: 'chaozuo',
+                    width: '150px',
                     formatter: function(value, row, index) {
                         var actions = [];
                         actions.push('<a class="btn btn-success btn-xs ' + houseaddressFlag + '" href="javascript:void(0)" onclick="$.operate.houseaddressTab(\'' + row.id + '\')"><i class="fa fa-search"></i>定位</a> ');
@@ -107,3 +135,23 @@
     </script>
 </body>
 </html>
+<style>
+    @media print {
+        .fixed-table-toolbar {
+            display: none;
+        }
+
+        .noprint {
+            display: none;
+        }
+
+        .fixed-table-pagination {
+            display: none !important;
+        }
+
+    }
+    @page {
+        size: auto;
+        margin: 0mm;
+    }
+</style>
