--- a/ruoyi-admin/src/main/resources/templates/landlordhomeorder/landlordorder/querycomment.html
+++ b/ruoyi-admin/src/main/resources/templates/landlordhomeorder/landlordorder/querycomment.html
@@ -57,11 +57,11 @@
             focusCleanup: true
         });
 
-        function submitHandler() {
-            if ($.validate.form()) {
-                $.operate.save(prefix + "/edit", $('#form-landlordorder-edit').serialize());
-            }
-        }
+        // function submitHandler() {
+        //     if ($.validate.form()) {
+        //         $.operate.save(prefix + "/querycomment", $('#form-landlordorder-edit').serialize());
+        //     }
+        // }
 
 
 
