--- a/ruoyi-admin/src/main/resources/templates/clientspecialtyorder/clientorder/querycomment.html
+++ b/ruoyi-admin/src/main/resources/templates/clientspecialtyorder/clientorder/querycomment.html
@@ -6,7 +6,7 @@
 </head>
 <body class="white-bg">
 <div class="wrapper wrapper-content animated fadeInRight ibox-content">
-    <form class="form-horizontal m" id="form-landlordorder-edit" th:object="${clientRoomRecord}">
+    <form class="form-horizontal m" id="form-landlordorder-edit" th:object="${clientSpecialtyRecord}">
         <input name="id" th:field="*{id}" type="hidden">
         <!--            <div class="form-group">    -->
         <!--                <label class="col-sm-3 control-label is-required">顾客账号：</label>-->
@@ -17,7 +17,7 @@
         <div class="form-group">
             <label class="col-sm-3 control-label is-required">订购特产记录ID：</label>
             <div class="col-sm-8">
-                <input name="roomRecordId" th:field="*{roomRecordId}" class="form-control" type="text" required disabled>
+                <input name="roomRecordId" th:field="*{specialtyRecordId}" class="form-control" type="text" required disabled>
             </div>
         </div>
 
@@ -52,7 +52,7 @@
 <th:block th:include="include :: footer" />
 <th:block th:include="include :: datetimepicker-js" />
 <script th:inline="javascript">
-    var prefix = ctx + "clienthomeorder/homeorder";
+    var prefix = ctx + "clientspecialtyorder/clientorder";
     $("#form-landlordorder-edit").validate({
         focusCleanup: true
     });
