--- a/ruoyi-admin/src/main/resources/templates/landlordspecialtyorder/specialtyorder/querycomment.html
+++ b/ruoyi-admin/src/main/resources/templates/landlordspecialtyorder/specialtyorder/querycomment.html
@@ -6,12 +6,16 @@
 </head>
 <body class="white-bg">
     <div class="wrapper wrapper-content animated fadeInRight ibox-content">
+
         <form class="form-horizontal m" id="form-specialtyorder-edit" th:object="${landlordSpecialtyRecord}">
+
+
             <input name="id" th:field="*{id}" type="hidden">
             <div class="form-group">    
                 <label class="col-sm-3 control-label is-required">特产购买记录ID：</label>
                 <div class="col-sm-8">
-                    <input name="specialtyRecordId" th:field="*{specialtyRecordId}" class="form-control" type="text" required disabled>
+                    <input name="specialtyRecordId" th:field="*{specialtyRecordId}" class="form-control" type="text"  required disabled>
+
                 </div>
             </div>
             <div class="form-group">    
@@ -23,7 +27,8 @@
             <div class="form-group">    
                 <label class="col-sm-3 control-label is-required">评价：</label>
                 <div class="col-sm-8">
-                    <input name="comment" th:field="*{comment}" class="form-control" type="text" required disabled>
+                    <input name="comment" th:field="*{comment}" class="form-control" type="text" onblur="commentisOK(this.value)" required disabled>
+
                 </div>
             </div>
             <div class="form-group">    
@@ -43,6 +48,7 @@
 
         </form>
     </div>
+
     <th:block th:include="include :: footer" />
     <th:block th:include="include :: datetimepicker-js" />
     <script th:inline="javascript">
@@ -52,14 +58,24 @@
         });
 
         function submitHandler() {
-            if ($.validate.form()) {
-                $.operate.save(prefix + "/edit", $('#form-specialtyorder-edit').serialize());
-            }
+                if ($.validate.form()) {
+                    $.operate.save(prefix + "/edit", $('#form-specialtyorder-edit').serialize());}
+        }
+
+        function commentisOK(comment) {
+            var reg=/^([0-9]|10)$/;
+            var res1;
+            res1 = reg.test(comment);
+            if(res1==false){
+                alert("用户暂未评价");}
         }
 
 
 
 
+
     </script>
+
+
 </body>
 </html>
