--- a/ruoyi-admin/src/main/resources/templates/landlordspecialtyorder/specialtyorder/specialtyorder.html
+++ b/ruoyi-admin/src/main/resources/templates/landlordspecialtyorder/specialtyorder/specialtyorder.html
@@ -217,7 +217,7 @@
                     align: 'center',
                     formatter: function(value, row, index) {
                         var actions = [];
-                        actions.push('<a class="btn btn-success btn-xs ' + querycommentFlag + '" href="javascript:void(0)" onclick="$.operate.querycomment(\'' + row.id + '\')"><i class="fa fa-edit"></i>查看评价</a> ');
+                        actions.push('<a class="btn btn-success btn-xs ' + querycommentFlag + '" href="javascript:void(0)" onclick="$.operate.querycommentTab(\'' + row.id + '\')"><i class="fa fa-edit"></i>查看评价</a> ');
                          actions.push('<a class="btn btn-danger btn-xs ' + removeFlag + '" href="javascript:void(0)" onclick="$.operate.remove(\'' + row.id + '\')"><i class="fa fa-remove"></i>删除</a>');
                         return actions.join('');
                     }
