--- a/ruoyi-admin/src/main/resources/templates/system/landlord/edit.html
+++ b/ruoyi-admin/src/main/resources/templates/system/landlord/edit.html
@@ -20,6 +20,12 @@
             </div>
         </div>
         <div class="form-group">
+            <label class="col-sm-3 control-label is-required">城市名称：</label>
+            <div class="col-sm-8">
+                <input name="city" class="form-control" type="text" required="required">
+            </div>
+        </div>
+        <div class="form-group">
             <label class="col-sm-3 control-label is-required">民宿图片：</label>
             <div class="col-sm-8">
                 <input name="imageUrl" th:field="*{imageUrl}" class="form-control" type="text" id="imageUrl" required>
