修复了历史订单（民宿&特产）前端按钮权限字符、后端Controller权限字符、菜单权限字符不一致的bug

--- a/ruoyi-admin/src/main/resources/templates/clienthomeorder/homeorder/homeorder.html
+++ b/ruoyi-admin/src/main/resources/templates/clienthomeorder/homeorder/homeorder.html
@@ -128,7 +128,7 @@
         var editFlag = [[${@permission.hasPermi('clienthomeorder:homeorder:edit')}]];
         var removeFlag = [[${@permission.hasPermi('clienthomeorder:homeorder:remove')}]];
         var commentsFlag = [[${@permission.hasPermi('clienthomeorder:homeorder:comment')}]];
-        var querycommentsFlag = [[${@permission.hasPermi('landlordhomeorder:landlordorder:querycomment')}]];
+        var querycommentsFlag = [[${@permission.hasPermi('clienthomeorder:homeorder:querycomment')}]];
         var isPaidDatas = [[${@dict.getType('sys_user_is_paid')}]];
         var isDoneDatas = [[${@dict.getType('sys_user_is_done')}]];
         var prefix = ctx + "clienthomeorder/homeorder";
