--- a/ruoyi-admin/src/main/resources/templates/index-topnav.html
+++ b/ruoyi-admin/src/main/resources/templates/index-topnav.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="renderer" content="webkit">
-	<title>XM-05 民宿旅游平台</title>
+	<title>第4组 民宿旅游平台</title>
 	<!-- 避免IE使用兼容模式 -->
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<link th:href="@{favicon.ico}" rel="shortcut icon"/>
@@ -27,7 +27,7 @@
 		</div>
 		<a th:href="@{/index}">
 			<li class="logo hidden-xs">
-				<span class="logo-lg">XM-05 民宿旅游</span>
+				<span class="logo-lg">第4组 民宿旅游</span>
 			</li>
 		</a>
 		<div class="sidebar-collapse tab-content" id="side-menu">
@@ -305,7 +305,7 @@
 		</div>
 
 		<div th:if="${footer}" class="footer">
-			<div class="pull-right">© [[${copyrightYear}]] XM-05 民宿旅游平台 </div>
+			<div class="pull-right">© [[${copyrightYear}]] 第4组 民宿旅游平台 </div>
 		</div>
 	</div>
 	<!--右侧部分结束-->
