--- a/ruoyi-admin/src/main/resources/templates/landlordhomeorder/landlordorder/edit.html
+++ b/ruoyi-admin/src/main/resources/templates/landlordhomeorder/landlordorder/edit.html
@@ -18,7 +18,7 @@
             <div class="form-group">    
                 <label class="col-sm-3 control-label is-required">民宿名称：</label>
                 <div class="col-sm-8">
-                    <input name="houseName" th:field="*{houseName}" class="form-control" type="text"required disabled>
+                    <input name="houseName" th:field="*{houseName}" class="form-control" type="text"required>
                 </div>
             </div>
 <!--            <div class="form-group">-->
@@ -37,25 +37,7 @@
                 <label class="col-sm-3 control-label">下单时间：</label>
                 <div class="col-sm-8">
                     <div class="input-group date">
-                        <input name="buyTime" th:value="${#dates.format(landlordRoomRecord.buyTime, 'yyyy-MM-dd')}" class="form-control" placeholder="yyyy-MM-dd" type="text">
-                        <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-                    </div>
-                </div>
-            </div>
-            <div class="form-group">    
-                <label class="col-sm-3 control-label">预计入住时间：</label>
-                <div class="col-sm-8">
-                    <div class="input-group date">
-                        <input name="checkInDate" th:value="${#dates.format(landlordRoomRecord.checkInDate, 'yyyy-MM-dd')}" class="form-control" placeholder="yyyy-MM-dd" type="text">
-                        <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-                    </div>
-                </div>
-            </div>
-            <div class="form-group">    
-                <label class="col-sm-3 control-label">预计退房时间：</label>
-                <div class="col-sm-8">
-                    <div class="input-group date">
-                        <input name="checkOutDate" th:value="${#dates.format(landlordRoomRecord.checkOutDate, 'yyyy-MM-dd')}" class="form-control" placeholder="yyyy-MM-dd" type="text">
+                        <input name="buyTime" th:value="${#dates.format(landlordRoomRecord.buyTime, 'yyyy-MM-dd')}" class="form-control" placeholder="yyyy-MM-dd" type="text" required disabled>
                         <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
                     </div>
                 </div>
@@ -64,7 +46,7 @@
                 <label class="col-sm-3 control-label">实际入住时间：</label>
                 <div class="col-sm-8">
                     <div class="input-group date">
-                        <input name="reserveInDate" th:value="${#dates.format(landlordRoomRecord.reserveInDate, 'yyyy-MM-dd')}" class="form-control" placeholder="yyyy-MM-dd" type="text">
+                        <input name="checkInDate" th:value="${#dates.format(landlordRoomRecord.checkInDate, 'yyyy-MM-dd')}" class="form-control" placeholder="yyyy-MM-dd" type="text">
                         <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
                     </div>
                 </div>
@@ -73,7 +55,25 @@
                 <label class="col-sm-3 control-label">实际退房时间：</label>
                 <div class="col-sm-8">
                     <div class="input-group date">
-                        <input name="reserveOutDate" th:value="${#dates.format(landlordRoomRecord.reserveOutDate, 'yyyy-MM-dd')}" class="form-control" placeholder="yyyy-MM-dd" type="text">
+                        <input name="checkOutDate" th:value="${#dates.format(landlordRoomRecord.checkOutDate, 'yyyy-MM-dd')}" class="form-control" placeholder="yyyy-MM-dd" type="text">
+                        <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
+                    </div>
+                </div>
+            </div>
+            <div class="form-group">    
+                <label class="col-sm-3 control-label">预计入住时间：</label>
+                <div class="col-sm-8">
+                    <div class="input-group date">
+                        <input name="reserveInDate" th:value="${#dates.format(landlordRoomRecord.reserveInDate, 'yyyy-MM-dd')}" class="form-control" placeholder="yyyy-MM-dd" type="text" required disabled>
+                        <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
+                    </div>
+                </div>
+            </div>
+            <div class="form-group">    
+                <label class="col-sm-3 control-label">预计退房时间：</label>
+                <div class="col-sm-8">
+                    <div class="input-group date">
+                        <input name="reserveOutDate" th:value="${#dates.format(landlordRoomRecord.reserveOutDate, 'yyyy-MM-dd')}" class="form-control" placeholder="yyyy-MM-dd" type="text" required disabled>
                         <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
                     </div>
                 </div>
@@ -81,13 +81,13 @@
             <div class="form-group">    
                 <label class="col-sm-3 control-label is-required">价格：</label>
                 <div class="col-sm-8">
-                    <input name="price" th:field="*{price}" class="form-control" type="text" required>
+                    <input name="price" th:field="*{price}" class="form-control" type="text" required disabled>
                 </div>
             </div>
             <div class="form-group">    
                 <label class="col-sm-3 control-label is-required">已付款：</label>
                 <div class="col-sm-8">
-                    <select name="isPaid" class="form-control m-b" th:with="type=${@dict.getType('sys_user_is_paid')}" required>
+                    <select name="isPaid" class="form-control m-b" th:with="type=${@dict.getType('sys_user_is_paid')}" required disabled>
                         <option th:each="dict : ${type}" th:text="${dict.dictLabel}" th:value="${dict.dictValue}" th:field="*{isPaid}"></option>
                     </select>
                 </div>
