修改了统计功能

--- a/ruoyi-admin/src/main/resources/templates/clienthomeorder/homeorder/comment.html
+++ b/ruoyi-admin/src/main/resources/templates/clienthomeorder/homeorder/comment.html
@@ -32,7 +32,7 @@
             <label class="col-sm-3 control-label">照片：</label>
             <div class="col-sm-8">
 <!--                <img id="menuIconImg" src="/news/default_images/dir.png" alt="图标加载失败" style="width-max: 100px;max-height: 50px;margin-right: 50px">-->
-                <button class="btn btn-primary" type="button" onclick="uploadIconBtn(this)" id="uploadButton">
+                <button class="btn btn-primary" type="button" onclick="uploadIconBtn(this)" id="uploadButton" required>
                     <i class="fa fa-upload"></i>&nbsp;&nbsp;<span class="bold" id="uploadSpan">上传</span>
                 </button>
             </div>
