--- a/ruoyi-admin/src/main/resources/templates/clientspecialtyorder/clientorder/eCharts.html
+++ b/ruoyi-admin/src/main/resources/templates/clientspecialtyorder/clientorder/eCharts.html
@@ -94,7 +94,7 @@
         var barChart = echarts.init(document.getElementById("echarts-bar-chart"));
         var baroption = {
             title : {
-                text: '每月该房东特产订单'
+                text: '每月该用户特产订单'
             },
             tooltip : {
                 trigger: 'axis'
